Try fix pulao word on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -34,7 +34,7 @@ body {
 
 .mc-icon-img {
     width: 100%;
-    height: 80px;
+    height: auto;
     border-bottom: dashed 1px purple;
     text-align: left;
     position: relative;
@@ -47,18 +47,18 @@ body {
     display: inline-block;
     border-radius: 5px;
     border: black solid 0.7px;
-    margin: 10px 0 0 3%;
+    margin: 10px 0 10px 3%;
 }
 
 .mc-pulao-word {
     width: 75%;
-    height: 70px;
+    height: 90%;
     border-radius: 3px;
     border: black solid 0.7px;
     background-color: seashell;
     color: #3e3e3e;
     display: inline-block;
-    text-indent: 1em;
+    text-indent: 0;
     font-size: 14px;
     position: absolute;
     top: 5px;
